# rippr

./: .gitignore  README.md  package-lock.json  package.json
scripts/: bundle-python.sh  download-ffmpeg.sh
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: design-philosophy.md  generate_all_icons.py  generate_icns_ico.py  generate_logo.py  icon.icns
src-tauri/src/: audio_analysis.rs  db.rs  lib.rs  main.rs  waveform.rs
src/components/: DownloadQueue.css  DownloadQueue.tsx  History.css  History.tsx  TrimWaveform.css  TrimWaveform.tsx  Waveform.css  Waveform.tsx
