[package]
name = "rippr"
version = "0.1.0"
description = "Rippr - Sample downloader for beat makers"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rippr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "io-util"] }
id3 = "1"
mp4ameta = "0.11"
dirs = "5"
symphonia = { version = "0.5", features = ["aac", "isomp4"] }
mp3lame-encoder = "0.2"
regex = "1"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
lazy_static = "1.4"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

